@@ -325,6 +325,8 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
                     || (requestContext.getProfileConfiguration().getEncryptAssertion() == CryptoOperationRequirementLevel.conditional && !encoder
                             .providesMessageConfidentiality(requestContext));
         } catch (MessageEncodingException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to determine if assertions should be encrypted"));
             log.error("Unable to determine if outbound encoding '{}' can provide confidentiality",
                     encoder.getBindingURI());
             throw new ProfileException("Unable to determine if assertions should be encrypted");
@@ -582,6 +584,8 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
         }
 
         if (signatureCredential == null) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "No signing credential available"));
             String msg = "No signing credential is specified for relying party configuration "
                     + requestContext.getRelyingPartyConfiguration().getProviderId();
             log.warn(msg);
@@ -597,6 +601,8 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
             // TODO how to pull what keyInfoGenName to use?
             SecurityHelper.prepareSignatureParams(signature, signatureCredential, null, null);
         } catch (SecurityException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to prepare assertion for signing"));
             String msg = "Error preparing signature for signing";
             log.error(msg);
             throw new ProfileException(msg, e);
@@ -609,10 +615,14 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
             assertionMarshaller.marshall(assertion);
             Signer.signObject(signature);
         } catch (MarshallingException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to marshall assertion for signing"));
             String errMsg = "Unable to marshall assertion for signing";
             log.error(errMsg, e);
             throw new ProfileException(errMsg, e);
         } catch (SignatureException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to sign assertion"));
             String msg = "Unable to sign assertion";
             log.error(msg, e);
             throw new ProfileException(msg, e);
@@ -650,6 +660,8 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
 
             return signAssertion;
         } catch (MessageEncodingException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to determine if outbound assertion should be signed"));
             log.error("Unable to determine if outbound encoding '{}' provides message integrity protection",
                     encoder.getBindingURI());
             throw new ProfileException("Unable to determine if outbound assertion should be signed");
@@ -754,6 +766,8 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
                     || (requestContext.getProfileConfiguration().getEncryptNameID() == CryptoOperationRequirementLevel.conditional && !encoder
                             .providesMessageConfidentiality(requestContext));
         } catch (MessageEncodingException e) {
+            requestContext.setFailureStatus(buildStatus(StatusCode.RESPONDER_URI, null,
+                    "Unable to determine if NameID should be encrypted"));
             String msg = "Unable to determine if outbound encoding '" + encoder.getBindingURI()
                     + "' provides message confidentiality protection";
             log.error(msg);
@@ -877,7 +891,12 @@ public abstract class AbstractSAML2ProfileHandler extends AbstractSAMLProfileHan
         samlResponse.setIssueInstant(new DateTime());
         populateStatusResponse(requestContext, samlResponse);
 
-        samlResponse.setStatus(requestContext.getFailureStatus());
+        Status status = requestContext.getFailureStatus();
+        if(status == null){
+            status = buildStatus(StatusCode.RESPONDER_URI, null, null);
+            requestContext.setFailureStatus(status);
+        }
+        samlResponse.setStatus(status);
 
         return samlResponse;
     }
