@@ -2,6 +2,7 @@ Changes in Release 2.3.6
 =============================================
 [SIDP-532] - ExternalAuthnSystemLoginHandler incorrectly logs as RemoteUserLoginHandler
 [SIDP-536] - LoginContext added to storage service twice but only cleared once
+[SIDP-538] - Response does not contain Status when assertion assigning is enabled but signing credential is improperly configured
 
 Changes in Release 2.3.5
 =============================================
